--- a/updates.html
+++ b/updates.html
@@ -281,9 +281,9 @@
                     <h2>Never Miss an Update</h2>
                     <p>Subscribe to our newsletter and be the first to know about new releases, partnerships, and impact stories.</p>
                 </div>
-                <form class="newsletter-form-large">
+                <form class="newsletter-form-large" name="newsletter-updates" method="POST" netlify>
                     <div class="form-group">
-                        <input type="email" placeholder="Enter your email address" required>
+                        <input type="email" name="email" placeholder="Enter your email address" required>
                         <button type="submit" class="btn btn-primary">
                             Subscribe
                             <i class="fas fa-paper-plane"></i>
@@ -388,8 +388,8 @@
                 <div class="footer-newsletter">
                     <h5>Stay Updated</h5>
                     <p>Subscribe to our newsletter for the latest updates</p>
-                    <form class="newsletter-form">
-                        <input type="email" placeholder="Enter your email" required>
+                    <form class="newsletter-form" name="newsletter-footer" method="POST" netlify>
+                        <input type="email" name="email" placeholder="Enter your email" required>
                         <button type="submit"><i class="fas fa-paper-plane"></i></button>
                     </form>
                 </div>
